<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.smitha.lms.StudentListFragment"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:weightSum="5"
    android:layout_marginTop="10dp"
    android:background="@color/lightBlue">
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/nametextView"
        android:layout_width="0dp"
        android:layout_height="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:textColor="@color/lines"
        android:background="@drawable/shape"
        android:textStyle="bold"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/col_name"/>

    <TextView
        android:id="@+id/agetextView"
        android:layout_width="0dp"
        android:layout_height="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:textColor="@color/lines"
        android:background="@drawable/shape"
        android:textStyle="bold"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/col_age"/>

    <TextView
        android:id="@+id/gendertextView"
        android:layout_width="0dp"
        android:layout_height="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:textColor="@color/lines"
        android:background="@drawable/shape"
        android:textStyle="bold"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/col_gender"/>

    <TextView
        android:id="@+id/salarytextView"
        android:layout_width="0dp"
        android:layout_height="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:textColor="@color/lines"
        android:background="@drawable/shape"
        android:textStyle="bold"

        android:padding="16dp"
        android:text="@string/col_salary"/>

    <TextView
        android:id="@+id/ratingtextView"
        android:layout_width="0dp"
        android:layout_height="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:textColor="@color/lines"
        android:background="@drawable/shape"
        android:textStyle="bold"
        android:padding="16dp"
        android:text="@string/col_rating"/>


</LinearLayout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <ListView
        android:id="@+id/listView_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/del_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:background="@drawable/select"
        android:textSize="20sp"
        android:layout_below="@+id/listView_id"
        android:layout_margin="10dp"
        />
    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:background="@drawable/select"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:layout_toRightOf="@+id/del_button"
        android:layout_below="@id/listView_id"
        />

</RelativeLayout>

</LinearLayout>